--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                     <input class="text" type="text">
                     <div class="form-check">
                         <input class="check" type="checkbox" name="" id="">
-                        <label>Eu aceito receber e-mails com dicas sobre o meio ambiente e promoções.</label>
+                        <label>Eu aceito receber e-mails com dicas da <br>
+                            semeie e prováveis eventos.</label>
                     </div>
                     <button class="botao">Enviar</button>
                 </form>
